Thu Mar 18 10:07:15 2004  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-draw.c (match_theme_image): Fix ./-> typo.
	(Federic Crozat)

Wed Mar 17 16:38:00 2004  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-draw.c (match_theme_image): Fix problem with
	NULL details. (#112066, MINAMI Hirokazu, Matthias Clasen)

2003-07-15  Mark McLoughlin  <mark@skynet.ie>

	* pixbuf-render.c: make pixbuf_cache static to avoid
	possible symbol conflicts.

2003-03-02  Tor Lillqvist  <tml@iki.fi>

	* Makefile.am: Use -no-undefined on Windows.

Fri Sep  6 20:32:45 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-draw.c: Account for the possibility of detail == NULL
	(#89561, Hongli Lai, Luca Barbato)

Sun Apr 21 14:10:04 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-rc-style.c pixbuf.h pixbuf-draw.c: Add a fake STEPPER
	function that is used for drawing scrollbar steppers,
	so that themes that want to draw the button and arrow
	separately can override the default handling.

	* pixbuf-draw.c: Remove draw_polygon() since it was
	just a cut-and-paste of the default one. Remove
	some unused code.

2002-03-07  James Henstridge  <james@daa.com.au>

	* Makefile.am (libpixmap_la_LIBADD): link pixbuf engine against
	the gtk+ libraries, so that it can be used with programs that
	dlopen gtk+ without the RTLD_GLOBAL flag (such as scripting
	languages and mozilla).

Thu Feb  7 00:21:21 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (pixbuf_render): Add gradient
	rendering -- if the source width/height is zero,
	render a gradient from the surrounding values.

Mon Jan 28 15:34:43 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (compute_hint): Fix hint computation
	again.

Mon Jan 28 12:17:07 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (compute_hint): Fix problems in computing
	MISSING hint.

Sun Jan 27 23:58:13 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (compute_hint): Optimize the case